--- a/app/src/main/res/layout/item_object.xml
+++ b/app/src/main/res/layout/item_object.xml
@@ -12,9 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="6dp"
-        android:background="@color/teal_700"
+        android:background="@color/teal_900"
         android:foreground="?attr/selectableItemBackground"
-        app:cardBackgroundColor="@color/teal_200"
+        app:cardBackgroundColor="@color/teal_900"
         app:cardCornerRadius="14dp"
         app:cardElevation="4dp">
 
@@ -41,10 +41,10 @@
                 android:elevation="4dp"
                 android:gravity="center"
                 android:maxLines="1"
+                android:ellipsize="end"
                 android:padding="12dp"
                 android:textColor="@color/white"
-                android:textSize="16sp"
-                android:textStyle="bold"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/imageObject"
